<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="#323232"
    android:padding="30dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_hint"/>
    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/search_dialog_ok"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/ok"/>
        <Button
            android:id="@+id/search_dialog_cancle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cancle"/>
    </LinearLayout>
</LinearLayout>