<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".TermActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:paddingLeft="100dp"
        android:paddingTop="140dp"
        android:paddingRight="10dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/terms"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/terms_msg"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/terms_msg1"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/terms_msg2"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:paddingTop="160dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/bt_term_accept"
            android:text="Accept"
            android:background="@drawable/bt_selector"
            android:gravity="center_vertical"
            android:layout_width="230dp"
            android:paddingLeft="2dp"
            android:textSize="12sp"
            android:textStyle="normal"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/bt_term_detail"
            android:text="Terms and Conditions"
            android:background="@drawable/bt_selector"
            android:gravity="center_vertical"
            android:layout_width="230dp"
            android:paddingLeft="4dp"
            android:textSize="12sp"
            android:textStyle="normal"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/bt_term_skip"
            android:text="skip"
            android:gravity="center_vertical"
            android:background="@drawable/bt_selector"
            android:layout_width="230dp"
            android:paddingLeft="4dp"
            android:textSize="12sp"
            android:textStyle="normal"
            android:layout_height="wrap_content"
            />
    </LinearLayout>



</LinearLayout>