<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ChannelSearchActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingTop="140dp"
        android:paddingLeft="100dp"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/dtt_search"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/terrestrial"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/cable"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/satellite"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="160dp"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/bt_terrestrial"
            android:background="@drawable/bt_selector"
            android:gravity="center_vertical"
            android:layout_width="230dp"
            android:paddingLeft="4dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="Terrestrial" />
        <Button
            android:id="@+id/bt_cable"
            android:background="@drawable/bt_selector"
            android:gravity="center_vertical"
            android:layout_width="230dp"
            android:paddingLeft="4dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="normal"
            android:text="Cable" />
        <Button
            android:id="@+id/bt_satellite"
            android:background="@drawable/bt_selector"
            android:gravity="center_vertical"
            android:layout_width="230dp"
            android:paddingLeft="4dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="normal"
            android:text="Satellite" />
        <Button
            android:id="@+id/bt_channel_skip"
            android:background="@drawable/bt_selector"
            android:gravity="center_vertical"
            android:layout_width="230dp"
            android:paddingLeft="4dp"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="Skip" />
    </LinearLayout>



</LinearLayout>